Richard: Almost managed to get companies list to automatically update withour page refresh .. few kinks in layout result of current script ... need to iron out bugs ... page refresh updates list correctly and removes layout bug.

--- a/public/stylesheets/rm-style.css
+++ b/public/stylesheets/rm-style.css
@@ -82,6 +82,7 @@
 	width:92%;
 	height:125px;
 	border:1px solid black;
+	border-top:3px solid black;
 }
 #input, #actions {
 	height:125px;
@@ -122,6 +123,7 @@
 	top:-33px;
 	left:24px;
 }
+.staff{ border:1px solid black; width:100%; height:200px;}
 #top, #middle, #bottom {
 	height:400px
 	width:100%;
